# Skillvine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  about_skillvine.txt  developer.md  docker-compose.yml  out.txt  start_all.ps1
docs/: admin.md  notifications.md  project_overview.md
migrations/: 20251111181918_add_full_name_to_users.sql  20251212000000_create_users_table.sql  20251213000000_drop_full_name_unique.sql  20251214000000_add_avatar_birthday.sql  20251214005000_create_teacher_verifications.sql  20251214010000_add_teacher_verification_fields.sql  20251214020000_create_teacher_verifications.sql  20251223000100_create_notifications.sql  20251223000300_support_requests.sql  20251223090000_extend_teacher_verifications_and_users.sql  20251223121000_add_kyc_verified_to_users.sql
scripts/: dump_env.ps1  start_server.ps1
src/: db.rs  main.rs
src/routes/: admin.rs  auth.rs  mod.rs  notifications.rs  profile.rs  verify.rs
src/services/: email.rs  token.rs
static/: styles.css
static/css/: auth.css  dashboard.css  student.css  teacher.css
static/js/: auth.js  flash.js  login.js  profile_manager.js  script.JS  signup(trash).html  signup.js
templates/: admin_dashboard.html  dashboard.html  login.html  overview.html  profile_manager.html  signup.html  student_dashboard.html  teacher_dashboard.html
